adding appointments and signout functionality

--- a/public/hospital.html
+++ b/public/hospital.html
@@ -8,7 +8,9 @@
       
   </head>
   <body>
-    <button ondblclick="initMap()">Location</button>
+    <button ondblclick="initMap()" style="position: relative;
+                                           top: 20px;
+                                           left: 50%">Location</button>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
